classDiagram
    %% Couche Présentation (WPF)
    class BackupViewModel {
        +Jobs: ObservableCollection~BackupJob~
        +PlayCommand: ICommand
        +SettingsCommand: ICommand
    }

    %% Couche Application / Core
    class BackupService {
        -IProcessMonitor _processMonitor
        -IBackupStrategy _strategy
        +ExecuteJob(job: BackupJob)
    }

    class IProcessMonitor {
        <<interface>>
        +IsBusinessSoftwareRunning(processName: string): bool
    }

    class BackupJob {
        +Id: int
        +Name: string
        +SourcePath: string
        +TargetPath: string
        +Type: BackupType
        +Progress: BackupProgress
    }

    class LogEntry {
        +CryptoTimeMs: long
        +TransferTimeMs: long
        +IsError: bool
    }

    %% Couche Infrastructure
    class WindowsProcessMonitor {
        +IsBusinessSoftwareRunning(processName: string): bool
    }

    class WindowsFileSystem {
        +CopyFile(source, dest): long
    }

    class CryptoService {
        +EncryptFile(source, dest, key): long
    }

    %% Relations
    BackupViewModel --> BackupService : "Appelle"
    BackupService --> IProcessMonitor : "Vérifie (Kill Switch)"
    BackupService --> BackupJob : "Traite (Illimité)"
    IProcessMonitor <|.. WindowsProcessMonitor : "Implémente"
    BackupService ..> LogEntry : "Crée"
    WindowsFileSystem ..> CryptoService : "Utilise si extension valide"